--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: 看代码，看世界
+email: waitloveinhit@163.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+  普通的工程师在普通的公司里做着普通的工作，看着普通的代码，调着普通的bug。
+  欢迎来到普通的博客，希望大家多多支持，一起学习进步！
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "http://myvps:4000" # the base hostname & protocol for your site
+#twitter_username: jekyllrb
+github_username:  SomeBadBoy
 
 # Build settings
 markdown: kramdown
